welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: reassignment to val
	if (Color.green = true) {
                        ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (Color.green = true) {
        ^